--- a/sections/templates/base.html
+++ b/sections/templates/base.html
@@ -9,7 +9,14 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
    </head>
    <body>
-      <h1>Hello Django!</h1>
+      <ul class="sidebar-nav">
+         {% if user.is_authenticated %}
+           <li>User: {{ user.get_username }}</li>
+           <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
+         {% else %}
+           <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
+         {% endif %}
+        </ul>
       {% block content %}
       {% endblock %}
    </body>
