--- a/sections/templates/main.html
+++ b/sections/templates/main.html
@@ -22,6 +22,13 @@
                 </div>
                <img id="right-paddle" class="skill-arrow" src="{% static 'icons\arrow-right.png' %}">
             </div>
+
+            <div id="stories-scroller-container">
+                {% for story in stories %}
+                {{story.title}}
+                <img src="media/{{story.cover}}">
+                {% endfor %}
+            </div> 
         </div>
         <script src="{% static 'js\scroll.js' %}"></script>
     </body>
