--- a/sections/static/styles/main.css
+++ b/sections/static/styles/main.css
@@ -1,12 +1,12 @@
 html, body {
+    background-image: url("../images/default_wallpaper.jpg"); 
+    background-size: 100%;
     margin:0px;
     height:100%;
 }
 
 .main-container
 { 
-    background-image: url("../images/default_wallpaper.jpg"); 
-    background-size: 100%;
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -75,4 +75,35 @@ html, body {
 #left-paddle
 {
     margin-right: 70%;
+}
+
+#stories-scroller-container
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.story-pane
+{
+    background-color: aliceblue;
+    border-radius: 5px;
+    flex-direction: column;
+    inline-size: 70%;
+    max-height: fit-content;
+    margin: 5px;
+}
+
+.story-banner
+{
+    display: flex;
+    overflow: hidden;
+    height: 500px;
+}
+
+.story-banner img
+{
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+    height: fit-content;
 }
