--- a/sections/static/styles/story.css
+++ b/sections/static/styles/story.css
@@ -9,6 +9,8 @@ img{
     margin: 50px;
 }
 .story-banner{
+    display: flex;
+    justify-content: center;
     width: 1000px;
     overflow: hidden;
 }
