--- a/sections/templates/story.html
+++ b/sections/templates/story.html
@@ -9,7 +9,7 @@
         <div class="story-container">
             <span class="story-banner">
                 {% if story.cover %}
-                    <img src="media/{{story.cover}}">
+                    <img src="/media/{{story.cover}}">
                 {% else %}
                     <img src="{% static 'images\default_wallpaper.jpg' %}">
                 {% endif %}
