--- a/sections/templates/mosaic.html
+++ b/sections/templates/mosaic.html
@@ -22,7 +22,7 @@
                 <div class="story-pane">
                     <span class="story-banner">
                         {% if story.cover %}
-                            <img src="media/{{story.cover}}">
+                            <img src="/media/{{story.cover}}">
                         {% else %}
                             <img src="{% static 'images\default_wallpaper.jpg' %}">
 
@@ -42,7 +42,7 @@
                 <div class="story-pane">
                     <span class="story-banner">
                         {% if story.cover %}
-                            <img src="media/{{story.cover}}">
+                            <img src="/media/{{story.cover}}">
                         {% else %}
                             <img src="{% static 'images\default_wallpaper.jpg' %}">
 
@@ -62,7 +62,7 @@
                 <div class="story-pane">
                     <span class="story-banner">
                         {% if story.cover %}
-                            <img src="media/{{story.cover}}">
+                            <img src="/media/{{story.cover}}">
                         {% else %}
                             <img src="{% static 'images\default_wallpaper.jpg' %}">
 
@@ -82,7 +82,7 @@
                 <div class="story-pane">
                     <span class="story-banner">
                         {% if story.cover %}
-                            <img src="media/{{story.cover}}">
+                            <img src="/media/{{story.cover}}">
                         {% else %}
                             <img src="{% static 'images\default_wallpaper.jpg' %}">
 
