--- a/sections/templates/mosaic_photos.html
+++ b/sections/templates/mosaic_photos.html
@@ -16,13 +16,13 @@
     <!-- Photo Grid -->
         <div class="row"> 
             <div class="column">
-                {% for story in stories1 %}
-                <a class="story-link" href="{% url 'story' story.id %}">
+                {% for shooting in stories1 %}
+                <a class="shooting-link" href="{% url 'shooting' shooting.id %}">
                     
-                <div class="story-pane">
-                    <span class="story-banner">
-                        {% if story.cover %}
-                            <img src="/media/{{story.cover}}">
+                <div class="shooting-pane">
+                    <span class="shooting-banner">
+                        {% if shooting.cover %}
+                            <img src="/media/{{shooting.cover}}">
                         {% else %}
                             <img src="{% static 'images\default_wallpaper.jpg' %}">
 
@@ -33,13 +33,13 @@
                 {% endfor %}
             </div>
             <div class="column">
-                {% for story in stories2 %}
-                <a class="story-link" href="{% url 'story' story.id %}">
+                {% for shooting in stories2 %}
+                <a class="shooting-link" href="{% url 'shooting' shooting.id %}">
 
-                <div class="story-pane">
-                    <span class="story-banner">
-                        {% if story.cover %}
-                            <img src="/media/{{story.cover}}">
+                <div class="shooting-pane">
+                    <span class="shooting-banner">
+                        {% if shooting.cover %}
+                            <img src="/media/{{shooting.cover}}">
                         {% else %}
                             <img src="{% static 'images\default_wallpaper.jpg' %}">
 
@@ -50,13 +50,13 @@
                 {% endfor %}
             </div>  
             <div class="column">
-                {% for story in stories3 %}
-                <a class="story-link" href="{% url 'story' story.id %}">
+                {% for shooting in stories3 %}
+                <a class="shooting-link" href="{% url 'shooting' shooting.id %}">
 
-                <div class="story-pane">
-                    <span class="story-banner">
-                        {% if story.cover %}
-                            <img src="/media/{{story.cover}}">
+                <div class="shooting-pane">
+                    <span class="shooting-banner">
+                        {% if shooting.cover %}
+                            <img src="/media/{{shooting.cover}}">
                         {% else %}
                             <img src="{% static 'images\default_wallpaper.jpg' %}">
 
@@ -67,13 +67,13 @@
                 {% endfor %}
             </div>
             <div class="column">
-                {% for story in stories4 %}
-                <a class="story-link" href="{% url 'story' story.id %}">
+                {% for shooting in stories4 %}
+                <a class="shooting-link" href="{% url 'shooting' shooting.id %}">
 
-                <div class="story-pane">
-                    <span class="story-banner">
-                        {% if story.cover %}
-                            <img src="/media/{{story.cover}}">
+                <div class="shooting-pane">
+                    <span class="shooting-banner">
+                        {% if shooting.cover %}
+                            <img src="/media/{{shooting.cover}}">
                         {% else %}
                             <img src="{% static 'images\default_wallpaper.jpg' %}">
 
