--- a/sections/templates/shooting.html
+++ b/sections/templates/shooting.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Portfolio</title>
+        <title>{{title}}</title>
         <link rel="stylesheet" href="{% static 'styles\story.css' %}" />
     </head>
     <body>
