--- a/sections/templates/shooting_mosaic.html
+++ b/sections/templates/shooting_mosaic.html
@@ -2,15 +2,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Portfolio</title>
+        <title>{{ title }}</title>
         <link rel="stylesheet" href="{% static 'styles\mosaic_photos.css' %}" />
     </head>
     <body>
 
     <!-- Header -->
     <div class="header">
-    <h1>Portfolio</h1>
-    <p>Resize the browser window to see the responsive effect.</p>
+    <h1>{{ title }}</h1>
     </div>
 
     <!-- Photo Grid -->
